# Task-Tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 052c2133997a_add_task_tags.py  0b88ed183b8b_task_priority_add.py  731899dc867e_init_all_tables.py  7ab19cfb5905.py  bfb5b412c17b_add_subtasks_table.py  e6abe9526008_token_init.py  fea0b2110c15_init_tables.py
nginx/: nginx.conf
scripts/: entrypoint.sh
src/: main.py
src/api/: auth.py  category.py  task.py
src/core/: config.py  exceptions.py  ioc.py  lifespan.py  logger.py  security.py
src/models/: category.py  task.py  user.py
src/repository/: base.py  category_repo.py  subtask_repo.py  tag_repo.py  task_repo.py  user_repo.py
src/schemas/: category.py  pagination.py  tags.py  task.py  user.py
src/services/: auth.py  task.py  task_cleanup.py
tests/: conftest.py  test_main.py
tests/test_api/: test_auth.py  test_category.py  test_subtask.py  test_task.py
tests/test_repository/: test_category_repo.py  test_subtask_repo.py  test_task_repo.py  test_user_repo.py
tests/test_service/: test_auth.py  test_task.py  test_task_cleanup.py
