[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "apscheduler>=3.11.2",
    "dishka>=1.8.0",
    "ruff>=0.15.2",
    "pre-commit>=4.5.1",
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "bcrypt>=5.0.0",
    "aiosqlite>=0.22.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.0.0",
]
